[TM-2457] - Implement Cookbook Create and Editor Views. - Fixes for an issue "after releasing a recipe, the wip should have an empty change log" - Wrapping the code to avoid scrolling horizontally.
[no tkt for now] - Implement Task Generation Code.
- Added the static part for task generation.

git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@4132 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/cookbook.css
+++ b/web-app/css/cookbook.css
@@ -173,7 +173,9 @@ form .error-msg{
 .alert.animateShow {
 	top:35px;
 }
+/****/
 
+/* Code Mirror Stuff */
 .CodeMirror{
 	height: 400px;
 }
@@ -191,7 +193,9 @@ form .error-msg{
 	border: none;
 	border-radius: 0;
 }
+/******/
 
+/* Validate Syntax Stuff */
 .syntaxErrors{
 	overflow: auto;
 	border: 1px solid #ddd;
@@ -200,4 +204,22 @@ form .error-msg{
 
 .syntaxErrors > li p:first-child{
 	margin: 0;
+}
+/*****/
+
+
+form.taskGeneration{
+	padding: 10px 0 0 0;
+}
+
+form.taskGeneration label{
+	margin: 0 5% 0 0;
+}
+
+form.taskGeneration label[for="autoPublishTasks"]{
+	margin: 20px 0 0 0;
+}
+
+.completionWrapper{
+	margin: 20px 0 0 0;
 }
